manifests/clips/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clips
  labels:
    app: clipdrop
