manifests/clips/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clipdrop
  namespace: clips
  labels:
    app: clipdrop
spec:
  selector:
    app: clipdrop
  ports:
  - name: http
    port: 80
    targetPort: http
